# multi-cite

./: .gitignore  LICENSE  Makefile  README.md  __from_DOI.bib  out1.md  pyproject.toml  sample1.md
multi_cite/: __init__.py  arxiv.py  bib.py  doi.py  pubmed.py  url.py  util.py
tests/: arxiv.md  arxiv_expected.md  doi.md  doi_expected.md  doi_handbook.md  doi_handbook_expected.md  pubmed.md  pubmed_expected.md  test_multi_cite.py  url.md  url2.md  url2_expected.md  url_expected.md
